# Differential-Drive-Robot

./: .gitignore  .gitmodules  README.md
app/: conf.ini
controllers/src/: io_linearization.cpp
coppeliasim_simulation/: dynamics.ttt  kinematics.ttt  medium_walls_dynamics.ttt  medium_walls_kynematics.ttt  simple_walls.ttt  simple_walls_dynamics.ttt
coppeliasim_simulation/urdf_from_coppelia/: differential_drive.urdf  differential_drive_Hokuyo_URG_04LX_UG01_body__70__.dae  kinematic_model.urdf  kinematic_model_Hokuyo_URG_04LX_UG01_body__70__.dae
docker_file/integrated_gpu/: dockerfile
docker_file/nvidia/: dockerfile
docker_file/nvidia_cuda/: dockerfile
driver_motor/: CMakeLists.txt  Findpigpio.cmake  package.xml
driver_motor/src/: test.cpp
installation/conda/: mamba_environment.yml
installation/docker_file/: README.md
matlab_simulation/: RRT_input_output.m  RRT_input_output_deltaInput.m  RRT_primitives.m  RRT_star_input_output.m  coppeliasim_simple.pgm  inflate_map.m  main.m  map.pgm  planning_fun.m  planning_fun_star.m
matlab_simulation/controllers/: approximate_linearization.m  approximate_linearization_linear.m  approximate_linearization_nonlinear.m  input_output_linearization.asv  input_output_linearization.m  nonlinear_lyapunov.m
matlab_simulation/maps/: simple_walls_map.pgm
old_matlab_simulation/: main.m
old_matlab_simulation/maps/: inflate_map.m
python_scripts/: path_utilities.py  robot_model.py
python_scripts/controllers/: approximate_linearization.py  casadi_nmpc.py  dynamic_linearization.py  ilqr.py  io_linearization.py  io_linearization_mpc.py  nonlinear_lyapunov.py  predictive_sampling.py
python_scripts/planners/: test_planning_time.py  test_single_planner.py
python_simulation/: main.py  robot_model.py  test.py
ros2_ws/: command.txt  coppeliasim_simple.yaml
ros2_ws/src/driver_motor/test/dc_motor_l298N/: CMakeLists.txt
(+174 files in other folders)
